# department-management-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: admin.py  main.py
app/api/: main.py
app/api/routes/: department.py
app/core/: config.py  database.py  dependencies.py
app/exceptions/: __init__.py  base.py  department.py  employee.py  handlers.py
app/models/: __init__.py  base.py  department.py  employee.py
app/repositories/: department.py  employee.py
app/schemas/: __init__.py  department.py  employee.py  text.py
app/services/: __init__.py  department.py  employee.py
migrations/: env.py
migrations/versions/: 20260513_01_add_departments_table.py  20260513_02_add_employees_table.py  20260513_03_add_cascade_foreign_keys.py
tests/: conftest.py
tests/e2e/: test_departments_api.py
tests/integration/: test_department_repository.py  test_employee_repository.py
tests/unit/: test_department_service.py  test_employee_service.py
