[project]
name = "department-management-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
